--- a/style.css
+++ b/style.css
@@ -201,6 +201,37 @@ main>section {
     margin-top: 4rem;
 }
 
+#google {
+    height: 48px; width: 142px;
+}
+
+#yahoo {
+    height: 27px; width: 140px;
+}
+
+#microsoft {
+    height: 30px; width: 144px;
+}
+
+#qualcomm {
+    height: 32px; width: 149px;
+}
+
+#asus {
+    height: 21px; width: 116px;
+}
+
+.line {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+margin-top: 2rem;
+}
+
+.line img:not(:first-child){
+    margin-left: 7rem;
+}
+
 @media only screen and (max-width: 600px) {
 
     #imgs>img { width: 100%; height: auto;}
