--- a/style.css
+++ b/style.css
@@ -229,10 +229,18 @@ main>section {
     display: grid;
     justify-content: center;
     align-items: center;
-margin-top: 2rem;
+    justify-items: center;
 }
 
+.line>img{
+    margin-top: 2rem;
+}
 
+.member>hr {
+    width: 2px;
+    height: 80px;
+    color: #1f7b1f;
+}
 
  #krisna {
     background: url('../img/krisna.png') center top/cover; ;
@@ -264,13 +272,14 @@ margin-top: 2rem;
     border-radius: 50%; 
     width: 124px; 
     height: 124px;
-    margin-bottom: 10px;
+    margin-bottom: 100px;
 }
 
 .member>div { 
     width: 124px; 
     height: 124px;
     border-radius: 50%;
+    margin-bottom: 10px;
 }
 
 @media only screen and (max-width: 600px) {
