--- a/style.css
+++ b/style.css
@@ -313,6 +313,22 @@ h5 { font: 1em Roboto; color: #fff; }
     height: 50px;
 }
 
+.about_us .social {
+    width: 128px;
+    display: flex;
+    justify-content: center;
+}
+
+.about_us>* {
+    display: flex;
+    justify-content: center;
+}
+
+#form-contact {
+    display: grid;
+    flex-direction: column;
+}
+
 @media only screen and (max-width: 600px) {
 
     #imgs>img { width: 100%; height: auto;}
