--- a/style.css
+++ b/style.css
@@ -100,6 +100,14 @@ li>a {
     border-radius: 0 20px 20px 0;
 }
 
+.about-btn {
+    background: #54d154;
+    padding: 5px 10px;
+    border-radius: 15px;
+    color: white;
+    border: none;
+    margin-top: 1rem;
+}
 
 .bgag {
     background-color: #fff;
@@ -320,6 +328,11 @@ background: #434343;
     display: flex;
 }
 
+.recent {
+    display: grid;
+    justify-items: center;
+}
+
 .img>img {
     background-position: center;
     background-size: cover;
@@ -335,6 +348,10 @@ background: #434343;
 
 .about_us hr {
     margin-bottom: 1rem;
+}
+
+.about_us h3 {
+    margin-bottom: .3rem;
 }
 
 .about_us>* {
@@ -355,7 +372,15 @@ background: #434343;
 }
 
 .contact hr {
-    margin-bottom: .8rem;
+    margin-bottom: 1rem;
+}
+
+.recent hr {
+    margin-bottom: 1rem;
+}
+
+.recent h3 {
+    margin-bottom: .3rem;
 }
 
 .about_us p {
@@ -364,6 +389,7 @@ background: #434343;
 
 .contact {
     text-align: center;
+    margin-top: 2rem;
 }
 
 .post {
@@ -374,10 +400,6 @@ background: #434343;
     margin-left: 1rem;
     display: grid;
     align-items: center;
-}
-
-.contact {
-    margin-top: 2rem;
 }
 
 #buttons1 {
@@ -424,11 +446,10 @@ background: #434343;
     color: white;
 }
 
-footer {
-    background: #000000cc;
-    display: flex;
-    justify-content: center;
-}
+footer { background: #000000cc; padding-top: 20px;}
+.footer { text-align: center; }
+.footer img { display: block; margin: 0 auto 20px auto; }
+
 
 @media only screen and (max-width: 600px) {
 
@@ -436,6 +457,9 @@ footer {
 }
 
 @media only screen and (min-width:768px) {
+
+    .container { max-width: 900px; margin: 0 auto; }
+
     nav {
         width: 100%;
         display: flex;
@@ -493,7 +517,6 @@ footer {
         justify-content: center;
         display: grid;
         align-items: center;
-        align-content: center;
         justify-items: center;
     }
 
@@ -512,19 +535,6 @@ footer {
         display: flex;
     }
 
-    .container {
-        max-width: 900px;
-        margin: 0 auto;
-    }
-
-    .footer img {
-        display: block;
-        margin: 0 auto 20px auto;
-    }
-
-    .footer {
-        display: flex;
-        justify-content: space-between;
-    }
+    .footer { display: flex; justify-content: space-between; }
 
 }
