--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ header {
     background: url('/img/artimg.jpg') center/cover;
     background-repeat: no-repeat;
     opacity: .9;
+    padding: 10px;
 
 }
 
@@ -100,6 +101,15 @@ li>a {
     border-radius: 0 20px 20px 0;
 }
 
+#button1 {
+    padding: 5px 15px;
+    background: #2b9b2b;
+    border: none;
+    border-radius: 15px;
+    color: white;
+    font: 300 1.2em Roboto;
+}
+
 .about-btn {
     background: #54d154;
     padding: 5px 10px;
@@ -107,6 +117,13 @@ li>a {
     color: white;
     border: none;
     margin-top: 1rem;
+}
+
+#scroll {
+    background: #ffffffcc;
+    padding: 6px;
+    border-radius: 15px;
+    font: 300 1.3em Roboto;
 }
 
 .bgag {
